k8s-apps/8.0-nginxinfo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-info-ingress
  namespace: default
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - k8s.nginx.rocks
    secretName: nginx-rocks-cert
  rules:
    - host: k8s.nginx.rocks
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-info
                port:
                  number: 80
          - path: /text
            pathType: Prefix
            backend:
              service:
                name: nginx-info
                port:
                  number: 90
