k8s-apps/8.1-nginxinfo-ingress-with-nap.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-info-ingress-waf
  annotations:
    kubernetes.io/ingress.class: "nginx"
    appprotect.f5.com/app-protect-policy: "default/dataguard-alarm"
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-security-log-enable: "True"
    appprotect.f5.com/app-protect-security-log: "default/logconf"
    appprotect.f5.com/app-protect-security-log-destination: "syslog:server=127.0.0.1:514"
  namespace: default
spec:
  tls:
  - hosts:
    - kic-waf.nginx.rocks
    secretName: nginx-rocks-cert
  rules:
    - host: kic-waf.nginx.rocks
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: nginx-info
              servicePort: 80
          - path: /text
            pathType: Prefix
            backend:
              serviceName: nginx-info
              servicePort: 90
